workloads/sonarqube/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-sonarqube
  namespace: sonarqube
  annotations:
    cert-manager.io/issuer: step-ca-cluster-issuer
    cert-manager.io/issuer-kind: StepClusterIssuer
    cert-manager.io/issuer-group: certmanager.step.sm
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - sonarqube-dev.skylarhoughtongithub.local
    secretName: sonarqube-tls
  rules:
  - host: sonarqube-dev.skylarhoughtongithub.local
    http:
      paths:
      - backend:
          service:
            name: sonarqube-sonarqube
            port:
              number: 9000
        path: /
        pathType: Prefix
